Mario jumping fixed and does not get hit when jumping on top of the shell only on the sides. Added more pictures on different screen. Improved level 3 playability.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -72,7 +72,7 @@ body {
             align-items: center;
 
             p{
-              &.instructions{
+              &.instructionsMove{
                   animation: pulsating 0.5s linear alternate infinite;
               }
             }
